--- a/StepSlider/res/nibs/Base.lproj/Main.storyboard
+++ b/StepSlider/res/nibs/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,23 +18,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dNa-lq-0iy" customClass="StepSlider">
-                                <rect key="frame" x="180" y="58" width="240" height="30"/>
+                                <rect key="frame" x="20" y="58" width="560" height="30"/>
                                 <animations/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="0.2137643914" green="0.73483758219999995" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="09d-NM-q4f"/>
-                                    <constraint firstAttribute="height" constant="30" id="lVo-PK-vne"/>
+                                    <constraint firstAttribute="height" constant="30" id="KAr-04-dEN"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="maxCount">
-                                        <integer key="value" value="3"/>
+                                        <integer key="value" value="5"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="index">
-                                        <integer key="value" value="1"/>
+                                        <integer key="value" value="2"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="trackHeight">
-                                        <real key="value" value="12"/>
+                                        <real key="value" value="4"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="trackCircleRadius">
                                         <real key="value" value="10"/>
@@ -63,14 +63,93 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eYk-9l-jGe">
+                                <rect key="frame" x="215" y="168" width="171" height="126"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4mV-vZ-SJb">
+                                        <rect key="frame" x="8" y="8" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Index"/>
+                                        <connections>
+                                            <action selector="changeIndex:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Tm6-nl-xBw"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zc0-sy-Hh0">
+                                        <rect key="frame" x="62" y="10" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Max"/>
+                                        <connections>
+                                            <action selector="changeMaxIndex:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hUf-9X-oUR"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="orR-ME-wWN">
+                                        <rect key="frame" x="8" y="68" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="SC"/>
+                                        <connections>
+                                            <action selector="changeSliderCircleColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ume-mB-I50"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HqD-eV-ahe">
+                                        <rect key="frame" x="62" y="38" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="TC"/>
+                                        <connections>
+                                            <action selector="changeTrackColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="y2m-88-3Uf"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iqU-D8-V5O">
+                                        <rect key="frame" x="62" y="68" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="SR"/>
+                                        <connections>
+                                            <action selector="changeSliderCircleRadius:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HG8-lF-SHi"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ho3-LO-mVi">
+                                        <rect key="frame" x="8" y="38" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="TH"/>
+                                        <connections>
+                                            <action selector="changeTrackHeight:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YFp-dv-OQx"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLs-Tx-TBB">
+                                        <rect key="frame" x="116" y="38" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="TCR"/>
+                                        <connections>
+                                            <action selector="changeTrackCircleRaidus:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4Wr-At-mds"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0eP-fn-RGP">
+                                        <rect key="frame" x="116" y="10" width="46" height="30"/>
+                                        <animations/>
+                                        <state key="normal" title="Tint"/>
+                                        <connections>
+                                            <action selector="changeTintColor:" destination="BYZ-38-t0r" eventType="touchUpInside" id="GIx-XZ-4nB"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="171" id="hkw-Ta-jKv"/>
+                                    <constraint firstAttribute="height" constant="126" id="pSi-Rf-MEG"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="dNa-lq-0iy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="4od-tT-3Hh"/>
                             <constraint firstItem="KDz-eV-f0y" firstAttribute="top" secondItem="dNa-lq-0iy" secondAttribute="bottom" constant="23" id="6U4-gh-3zH"/>
+                            <constraint firstItem="eYk-9l-jGe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="7HR-Qc-nQ7"/>
+                            <constraint firstItem="dNa-lq-0iy" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="U7f-6q-4FR"/>
                             <constraint firstItem="dNa-lq-0iy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h2u-MW-E6t"/>
                             <constraint firstItem="KDz-eV-f0y" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rpT-7c-Tdy"/>
                             <constraint firstItem="dNa-lq-0iy" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="38" id="vEx-5n-x5m"/>
+                            <constraint firstItem="eYk-9l-jGe" firstAttribute="top" secondItem="KDz-eV-f0y" secondAttribute="bottom" constant="36" id="vPe-tE-XHF"/>
                         </constraints>
                     </view>
                     <connections>
